<resources>
    <string name="app_name">TP n°1</string>
    <string name="nom">Nom </string>
    <string name="pre">Prénom </string>
    <string name="ddn"> Né.e le : </string>
    <string name="genre"> Genre </string>
    <string name="h"> Homme </string>
    <string name="f"> Femme </string>
    <string name="a"> Autre </string>
    <string name="add">Ajout d\'un contact</string>
    <string name="alt_image">Image du contact</string>
    <string name="fav" > Ajouter aux favoris ? </string>
    <string name="ajoutfav">Ajouter aux favoris ?</string>
    <string name="valider">Valider</string>
    <string name="ajout_de_contact">Ajout de contact</string>
    <string name="demande_prenom">Entrez le prénom du contact</string>
    <string name="tel">Téléphone</string>
    <string name="code">intentCode</string>
    <string name="DernierAjout">Dernier contact ajouté</string>
    <string name="galerie">Importer une photo</string>
    <string name="camera">Prendre une photo</string>
</resources>